syntax = "proto3";

option go_package = "./pb"; 
package pb;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name1 = 1;
  string name2 = 2;
  string name3 = 3;
  string name4 = 4;
  string name5 = 5;
  string name6 = 6;
  string name7 = 7;
  string name8 = 8;
  string name9 = 9;
  string name10 = 10;
}

// The response message containing the greetings
message HelloReply {
  string message1 = 1;
  string message2 = 2;
  string message3 = 3;
  string message4 = 4;
  string message5 = 5;
  string message6 = 6;
  string message7 = 7;
  string message8 = 8;
  string message9 = 9;
  string message10 = 10;
}
